--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-validator": "^6.7.0",
     "handlebars": "^4.5.3",
     "mongoose": "^5.10.15",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "slug": "^4.0.2"
   },
