--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "concurrently": "^5.3.0",
     "connect-flash": "^0.1.1",
@@ -26,7 +27,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
-    "slug": "^4.0.2"
+    "slug": "^4.0.2",
+    "sweetalert2": "^10.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
